--- a/dashboard.html
+++ b/dashboard.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Compiled and minified CSS -->
+    //
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
+    <title>Travel Stash</title>
 </head>
+
+
 <body>
-    
+    <!--<div class='container card-panel'> -->
+        <nav class="container nav-extended card-panel teal lighten-2">
+            <div class="nav-wrapper">
+                <a href="#!" class="brand-logo">Travel Stash</a>
+
+            </div>
+            <div class="nav-content">
+                <span class="nav-title">Plan Your Trip</span>
+                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal">
+                    <a class="btn tooltipped" data-position="bottom" data-tooltip="I am a tooltip">Hover me!</a>
+                    <!--<i class="material-icons btn tooltipped" data-position="bottom" data-tooltip="Add Trip"> + </i>-->
+                </a>
+            </div>
+        </nav>
+        <!-- this is a card section for dynamic use -->
+
+        <div class="col s4 m2">
+            <h2 class="header">Victor Harbor</h2>
+            <div class="card horizontal">
+              <div class="card-image">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fkriesi.at%2Fthemes%2Fenfold-travel[…]e=images&cd=vfe&ved=0CAsQjRxqFwoTCPje5_aE3foCFQAAAAAdAAAAABAD">
+              </div>
+              <div class="card-stacked">
+                <div class="card-content">
+                  <p>I am a very simple card. I am good at containing small bits of information.</p>
+                </div>
+                <div class="card-action">
+                  <a href="#">This is a link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+                
+
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
+
 </html>
