--- a/dashboard.html
+++ b/dashboard.html
@@ -2,57 +2,100 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Compiled and minified CSS -->
-    //
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="./assets/styles/style.css">
-    <title>Travel Stash</title>
+  <!-- Character Set - Device Accessibility & Compatibility -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <!-- Our custom .css file - It is placed here to override any links above -->
+  <link rel="stylesheet" href="./assets/styles/style.css">
+  <!-- Title Bar  -->
+  <title>Travel Stash</title>
 </head>
-
+<!------------------------------------------------------------------------------------------------------------------------------------ -->
 
 <body>
-    <!--<div class='container card-panel'> -->
-        <nav class="container nav-extended card-panel teal lighten-2">
-            <div class="nav-wrapper">
-                <a href="#!" class="brand-logo">Travel Stash</a>
+  <!-- This is the container  -->
 
-            </div>
-            <div class="nav-content">
-                <span class="nav-title">Plan Your Trip</span>
-                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal">
-                    <a class="btn tooltipped" data-position="bottom" data-tooltip="I am a tooltip">Hover me!</a>
-                    <!--<i class="material-icons btn tooltipped" data-position="bottom" data-tooltip="Add Trip"> + </i>-->
-                </a>
-            </div>
-        </nav>
-        <!-- this is a card section for dynamic use -->
+  <div id="container" class='row card-panel'>
+    <!-- Navbar goes here -->
+    <nav class="nav-extended card-panel cyan darken-2 row">
+      <!-- Page Layout here -->
+      <div class="nav-wrapper">
 
-        <div class="col s4 m2">
-            <h2 class="header">Victor Harbor</h2>
-            <div class="card horizontal">
-              <div class="card-image">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fkriesi.at%2Fthemes%2Fenfold-travel[…]e=images&cd=vfe&ved=0CAsQjRxqFwoTCPje5_aE3foCFQAAAAAdAAAAABAD">
-              </div>
-              <div class="card-stacked">
-                <div class="card-content">
-                  <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                  <a href="#">This is a link</a>
-                </div>
+        <a href="#!" class="brand-logo">Travel Stash</a>
+
+
+        <div class="nav-content">
+          <h4 class="nav-title cyan-text text-lighten-5">Plan Your Trip</h4>
+
+          <a class="btn-floating btn-large right waves-effect waves-light blue"><i class="material-icons tooltipped"
+              data-position="top" data-tooltip="Add Trip">add</i></a>
+        </div>
+      </div>
+    </nav>
+
+    <!-- ------------------------------------------------------------------------------------- -->
+    <!-- this is a card section for dynamic use i have the static cards there for viewing purposes
+    you can see how they will wrap and show on the page. I have left a section for a background image-->
+    <div id="wrapper" class='card-panel cyan lighten-5'>
+
+
+
+      <div class="row ">
+        <div class="col s12 m6 l2 ">
+          <div class="card cyan darken-2 z-depth-5">
+            <div class="card-content white-text">
+              <!-- Custom photo dynamic background image can go here  -->
+              <span class="card-title">Location</span>
+              <p>Dates will go in here </p>
+            </div>
+          </div>
+        </div>
+
+
+  
+          <div class="col s12 m6 l2 ">
+            <div class="card cyan darken-2 z-depth-5">
+              <div class="card-content white-text">
+                <!-- Custom photo dynamic background image can go here  -->
+                <span class="card-title">Location</span>
+                <p>Dates will go in here </p>
               </div>
             </div>
           </div>
 
-                
 
-    <!--JavaScript at end of body for optimized loading-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+            <div class="col s12 m6 l2 ">
+              <div class="card cyan darken-2 z-depth-5">
+                <div class="card-content white-text">
+                  <!-- Custom photo dynamic background image can go here  -->
+                  <span class="card-title">Location</span>
+                  <p>Dates will go in here </p>
+                </div>
+              </div>
+            </div>
+
+            
+            <div class="col s12 m6 l2 ">
+              <div class="card cyan darken-2 z-depth-5">
+                <div class="card-content white-text">
+                  <!-- Custom photo dynamic background image can go here  -->
+                  <span class="card-title">Location</span>
+                  <p>Dates will go in here </p>
+                </div>
+              </div>
+            </div>
+
+
+  </div>
+  <!--JavaScript at end of body for optimized loading-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="/assets/scripts/dashboard.js"></script>
 </body>
 
 </html>
