--- a/dashboard.html
+++ b/dashboard.html
@@ -17,10 +17,10 @@
 </head>
 <!------------------------------------------------------------------------------------------------------------------------------------ -->
 
-<body>
+<bodyclass='row card-panel center-align >
   <!-- This is the container  -->
 
-  <div id="container" class='row card-panel center-align'>
+  <div id="container" '>
     <!-- Navbar goes here -->
     <nav class="nav-extended card-panel cyan darken-2 row">
       <div class="nav-wrapper">
@@ -31,8 +31,8 @@
           <p class="nav-title cyan-text text-lighten-5 flow-text">Plan Your Trip</p>
           <!-- <p> Blaaaahh blahh blah Get your local weather updates to your desired travel location and organise yourself by making a custom to-do/packing list blahh blahh </p> -->
           <!-- this is the plus button this will need to be linked to the dynamically created location cards to add a new one -->
-          <a class="btn-floating btn-large right waves-effect waves-light blue hoverable"><i
-              class="material-icons tooltipped" data-position="top" data-tooltip="Add Trip">add</i></a>
+          <a class="btn-floating btn-large right waves-effect waves-light cyan lighten-5 hoverable "><i
+              class=" material-icons tooltipped" data-position="bottom" data-tooltip="Add Trip">add</i></a>
         </div>
       </div>
     </nav>
@@ -43,7 +43,7 @@
     <div id="wrapper" class='card-panel cyan lighten-5'>
       <!-- This is the'first card -->
       <div class="row ">
-        <div class="col s12 m6 l2 ">
+        <div class="col s12 m6 l3 ">
           <div class="card cyan darken-2 hoverable z-depth-5">
             <div class="card-content white-text">
               <!--below you can add to the div above if you want to test out what a background image will look like-->
@@ -57,7 +57,7 @@
 
 <!-- TO BE DELETED EVENTUALLY ------------------------------------------------>
 
-        <div class="col s12 m6 l2 ">
+        <div class="col s12 m6 l3 ">
           <div class="card cyan darken-2 hoverable z-depth-5">
             <div class="card-content white-text">
               <!-- Custom photo dynamic background image can go here  -->
@@ -69,7 +69,7 @@
 
 
 
-        <div class="col s12 m6 l2 ">
+        <div class="col s12 m6 l3 ">
           <div class="card cyan darken-2 hoverable z-depth-5">
             <div class="card-content white-text">
               <!-- Custom photo dynamic background image can go here  -->
@@ -80,7 +80,7 @@
         </div>
 
 
-        <div class="col s12 m6 l2 ">
+        <div class="col s12 m6 l3 ">
           <div class="card cyan darken-2 hoverable z-depth-5">
             <div class="card-content white-text">
               <!-- Custom photo dynamic background image can go here  -->
@@ -91,6 +91,18 @@
         </div>
 <!---------------------------------------------------------------------------------------------  -->
       </div>
+   </div>
+
+   <!-- OPTIONAL  Footer -->
+      <footer class="page-footer cyan lighten-5">
+      
+        <div class="cyan darken-2 footer-copyright">
+          <div class="container ">
+          © 2014 Copyright Text - Nic, Dan, Ned & Kel
+          <a class="grey-text text-lighten-4  right" href="#!">More Links</a>
+          </div>
+     
+      </footer>
       <!--JavaScript at end of body for optimized loading-->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <script src="/assets/scripts/dashboard.js"></script>
