--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pack Stash</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 
 <body>
-    <div id="" class="container center-align cyan darken-2 z-depth-5 ">
-        <div class=" row  center-align cyan lighten-5">
-            <form class="col s12 m12 l12">
+    <br>
+    <div  class=" center-align  ">
+        <div id="testing" class="row  center-align cyan lighten-5">
+            <form class="col s12 m12 l12 z-depth-5 " >
                 <div class="row">
                     <div class="input-field">
                         <textarea id="u-login" class="materialize-textarea center-align" placeholder="Username"></textarea>
