--- a/dashboard.html
+++ b/dashboard.html
@@ -24,7 +24,7 @@
     <nav class="nav-extended card-panel cyan darken-2 row">
       <div class="nav-wrapper">
         <!-- BRAND  -->
-        <h1><a href="#!" class="brand-logo">Travel Stash</a></h1>
+        <a href="#!" class="brand-logo align-center">Travel Stash</a>
         </div>
         <!-- This is where we can put a slogan/paragraph of ' how to use' etc..... -->
       <div class="nav-content">
