--- a/dashboard.html
+++ b/dashboard.html
@@ -18,6 +18,9 @@
 <!------------------------------------------------------------------------------------------------------------------------------------ -->
 
 <body>
+
+
+
   <!-- This is the container  -->
   <main>
     <!-- Navbar goes here -->
@@ -25,18 +28,18 @@
       <div class="nav-wrapper">
         <!-- BRAND  -->
         <a href="#!" class="brand-logo align-center">Travel Stash</a>
-        </div>
-        <!-- This is where we can put a slogan/paragraph of ' how to use' etc..... -->
+      </div>
+      <!-- This is where we can put a slogan/paragraph of ' how to use' etc..... -->
       <div class="nav-content">
-      
+
         <p class="nav-title cyan-text text-lighten-5">Plan Your Trip</p>
         <!-- <p> Blaaaahh blahh blah Get your local weather updates to your desired travel location and organise yourself by making a custom to-do/packing list blahh blahh </p> -->
         <!-- this is the plus button this will need to be linked to the dynamically created location cards to add a new one -->
-      
+
         <a class="btn-floating btn-large right waves-effect waves-light cyan lighten-5 hoverable "><i
             class=" material-icons tooltipped" data-position="bottom" data-tooltip="Add Trip">add</i></a>
       </div>
- 
+
     </nav>
 
     <!-- ------------------------------------------------------------------------------------- -->
@@ -57,6 +60,7 @@
             </div>
           </div>
         </div>
+
 
         <!-- TO BE DELETED EVENTUALLY ------------------------------------------------>
 
@@ -96,6 +100,26 @@
         <!---------------------------------------------------------------------------------------------  -->
       </div>
 
+
+
+      <div class="weather">
+        <div class='input'>
+          <input type="text" class="inputValue" placeholder="Enter a city">
+          <input type="submit" value="Submit" class="button">
+        </div>
+
+        <div class="display">
+          <h1 class="city"></h1>
+          <p class="desc"></p>
+          <p class="temp"></p>
+        </div>
+      </div>
+
+      api.openweathermap.org/data/2.5/forecast?q=adelaide&units=metric&appid=549aae77a3dc08100f08e1988c47e726
+
+
+
+
     </div>
 
     <!-- OPTIONAL  Footer -->
@@ -103,7 +127,7 @@
 
       <div class="cyan darken-2 footer-copyright">
         <div class="container ">
-          © 2014 Copyright Text - Nic, Dan, Ned & Kel
+          © 2022 Copyright Text - Nic, Dan, Ned & Kel
           <a class="grey-text text-lighten-4  right" href="#!">More Links</a>
         </div>
   </main>
