Added the ability to add custom items to list, all local storage working

--- a/test.html
+++ b/test.html
@@ -12,8 +12,8 @@
     <div id="pre-pop"></div>
     <div id="custom">
         <form id="custom-new">
-            <input type="text">
-            <button type="button">submit</button>
+            <input type="text" id="add-more-cont">
+            <button type="button" id="add-more">submit</button>
         </form>
         <div id="custom-list"></div>
         <div id="custom-id"></div>
