first commit of new html weather app

--- a/weather.html
+++ b/weather.html
@@ -1,5 +1,29 @@
 
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Weather App</title>
+</head>
+<body>
+ <div class="card">
+  <div class="search">
+    <input type="text" class="search-bar">
+    <button>search</button>
+    </div>
+  </div>
+  <div class="weather">
+    <h2 class="city">Weather in Adelaide</h2>
+    <div class="temp">33°C</div>
+    <img src="" alt="" class="icon"/>
+    <div class="description">Sunny</div>
+    <div class="humidity">Humidity: 40%</div>
+    <div class="wind">Wind speed: 12.5km/h</div>
+  </div>
+</body>
+</html>
      
 
       
