--- a/weather.html
+++ b/weather.html
@@ -1,29 +1,30 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/weather.css">
   <title>Weather App</title>
 </head>
+
 <body>
- <div class="card">
-  <div class="search">
-    <input type="text" class="search-bar">
-    <button>search</button>
+  <div class="card">
+    <div class="search">
+      <input type="text" class="search-bar">
+      <button>search</button>
     </div>
   </div>
   <div class="weather">
     <h2 class="city">Weather in Adelaide</h2>
-    <div class="temp">33°C</div>
-    <img src="" alt="" class="icon"/>
+    <h1 class="temp">33°C</h1>
+    <img src="" alt="" class="icon" />
     <div class="description">Sunny</div>
     <div class="humidity">Humidity: 40%</div>
     <div class="wind">Wind speed: 12.5km/h</div>
   </div>
+  <script src="./assets/weather.js"></script>
 </body>
-</html>
-     
 
-      
+</html>
