Started to add the abilty to check off items already packed

--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
             <button type="button" id="add-more">submit</button>
         </form>
         <div id="custom-list"></div>
-        <div id="custom-id"></div>
+        <div id="packed-list"></div>
     </div>
     <script src="./assets/scripts/stash.js"></script>
 </body>
