added more comments

--- a/test.html
+++ b/test.html
@@ -15,8 +15,8 @@
             <input type="text" id="add-more-cont">
             <button type="button" id="add-more">submit</button>
         </form>
-        <div id="custom-list"></div>
-        <div id="packed-list"></div>
+        <div id="custom-list"><p>not packed</p></div>
+        <div id="packed-list"><p>packed</p></div>
     </div>
     <script src="./assets/scripts/stash.js"></script>
 </body>
