started adding js to link api

--- a/weather.html
+++ b/weather.html
@@ -12,8 +12,8 @@
 <body>
   <div class="card">
     <div class="search">
-      <input type="text" class="search-bar">
-      <button>search</button>
+      <input type="text" class="search-bar" placeholder="Enter City Name">
+      <button>Search</button>
     </div>
   </div>
   <div class="weather">
