--- a/stash.html
+++ b/stash.html
@@ -35,32 +35,32 @@
     <!-- Page Layout here -->
     <div class="row">
 
-        <div class="col s3 cyan lighten-5">
+        <div class="col s3 m3 l3">
             <!-- Grey navigation panel -->
-            <div id="sidebar">
+            <div id="sidebar"  class="cyan lighten-5 " >
                 <p>This is optional, if we want to put any additional things here as a sidebar</p>
             </div>
         </div>
 
-        <div class="col s9">
+        <div class="col s3 m9 l9">
             <!-- main page content  ------------------------------------------------------------------------------->
             <!-- map goes here -->
             <div class="row teal lighten-4">
-                <div id="map">
+                <div id="map" class="col s12 m12 l12">
                     <p>This is the map section</p>
                 </div>
             </div>
 
             <!-- This will be where the weather forecast will go -------------------------------------------------------------->
             <div class="row cyan lighten-4">
-                <div id="weather">
+                <div id="weather" class="col s12 m12 l12">
                     <p>This is the weather section</p>
                 </div>
             </div>
             <!-- this is the packing CHECKLIST SECTION ------------------------------------------------------->
             <div id="pre-pop" class="row  teal lighten-4">
-                <div id="custom">
-                    <form id="custom-new input-field col s6">
+                <div id="custom" class="col s12 m12 l12">
+                    <form id="custom-new" class="input-field col s6">
                         <input type="text" id="add-more-cont" placeholder="ADD ITEMS" class="white-text">
                         <button class="btn waves-effect waves-light hoverable cyan darken-2" type="button"
                             id="add-more">add item</button>
@@ -79,12 +79,14 @@
                             <label>
                                 <input class="col s6" type="checkbox" />
                                 <span>not packed</span>
+                               
                             </label>
                         </p>
                         <p>
                             <label>
                                 <input type="checkbox" class="filled-in" checked="checked" />
                                 <span>packed</span>
+                                <!-- <ul id="packed"></ul> -->
                             </label>
                         </p>
                     </form>
