--- a/dashboard.html
+++ b/dashboard.html
@@ -51,7 +51,7 @@
               <!--below you can add to the div above if you want to test out what a background image will look like-->
               <!--style="background-image: url('https://cms.finnair.com/resource/blob/673242/3523a759b61b788b834fe56aa57fa255/sydney-main-data.jpg');background-size:cover;"> -->
               <!-- Custom photo dynamic background image can go here  and also link ready when clicked - example goes to google-->
-              <span class="card-title "><a href="http://www.google.com"
+              <span class="card-title "><a href="./stash.html"
                   class=" white-text scale-transition">Location</a></span>
               <p>Dates will go in here </p>
             </div>
