--- a/stash.html
+++ b/stash.html
@@ -32,7 +32,9 @@
         </div>
 
     </nav>
-    <!-- Page Layout here -->
+
+    
+    <!-- Page Layout here-------------------------------------------------------------------------- -->
     <div class="row">
 
         <div class="col s3 m3 l3">
