--- a/stash.html
+++ b/stash.html
@@ -68,13 +68,14 @@
                     <!-- this is where you will see what is and isnt packed/checked off? -->
                     <!--NIC --  Use checkboxes when looking for yes or no answers. true false? The for attribute is necessary to bind our custom checkbox with the input.
                  Add the input's id as the value of the for attribute of the label. -->
+                    <div id="pre-pop">our pre populated list goes here</div>
                     <div id="custom-list" class="col s6">
                         <p>not packed</p>
                     </div>
                     <div id="packed-list" class="col s6">
                         <p>packed</p>
                     </div>
-                    <form action="#">
+                    <!-- <form action="#">
                         <p>
                             <label>
                                 <input class="col s6" type="checkbox" />
@@ -86,15 +87,15 @@
                             <label>
                                 <input type="checkbox" class="filled-in" checked="checked" />
                                 <span>packed</span>
-                                <!-- <ul id="packed"></ul> -->
+                                <ul id="packed"></ul>
                             </label>
                         </p>
-                    </form>
+                    </form> -->
                 </div>
                 <!-- -------------------------------------------------------------------------------------------------- -->
             </div>
         </div>
 
     </div>
-
+    <script src='./assets/scripts/stash.js'></script>
 </body>
