--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
                     </div>
                 </div>
                 <button class="btn waves-effect waves-light hoverable cyan darken-2" type="submit" name="action"
-                    id="user-sub">Submit
-
-                </button>
+                    id="user-sub">Submit</button>
             </form>
         </div>
         <div id="pass-return"></div>
