--- a/dashboard.html
+++ b/dashboard.html
@@ -40,7 +40,7 @@
       <!-- new trip here -->
       <div id="new-trip">
         <textarea id="u-location" class="materialize-textarea center-align" placeholder="Where are we going?" class="newtrip"></textarea>
-        <textarea id="u-date" class="materialize-textarea center-align" placeholder="When are we going?" class="newtrip"></textarea>
+        <input type="text" class="datepicker" id="u-date" placeholder="When are you going?">
         <button class="btn waves-effect waves-light hoverable cyan darken-2" type="submit" name="action" id="user-sub">Submit</button>
       </div>
   
@@ -116,6 +116,10 @@
   </main>
   </footer>
   <!--JavaScript at end of body for optimized loading-->
+  <script
+  src="https://code.jquery.com/jquery-3.6.1.js"
+  integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+  crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="/assets/scripts/dashboard.js"></script>
 </body>
