--- a/stash.html
+++ b/stash.html
@@ -49,14 +49,14 @@
             <!-- map goes here -->
             <div class="row teal lighten-4">
                 <div id="map" class="col s12 m12 l12">
-                    <p>This is the map section</p>
+                    <div><img class="center-align" width="650"  src="./assets/images/map-default.jpg"></div>
                 </div>
             </div>
 
             <!-- This will be where the weather forecast will go -------------------------------------------------------------->
             <div class="row cyan lighten-4">
                 <div id="weather" class="col s12 m12 l12">
-                    <p>This is the weather section</p>
+                    <div><img class="center-align" width="650" src="./assets/images/weather-default.jpg"></div>
                 </div>
             </div>
             <!-- this is the packing CHECKLIST SECTION ------------------------------------------------------->
@@ -82,6 +82,7 @@
 
                     <div id="packed-list" class="col s6 m6 l6">
                         <p>packed</p>
+                      
                     </div>
 
                     </form>
