--- a/dashboard.html
+++ b/dashboard.html
@@ -103,14 +103,14 @@
 
       <div class="cyan darken-2 footer-copyright">
         <div class="container ">
-          © 2014 Copyright Text - Nic, Dan, Ned & Kel
+          Nic, Dan, Ned & Kel
           <a class="grey-text text-lighten-4  right" href="#!">More Links</a>
         </div>
   </main>
   </footer>
   <!--JavaScript at end of body for optimized loading-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="/assets/scripts/dashboard.js"></script>
+  <script src="./assets/scripts/dashboard.js"></script>
 </body>
 
 </html>
