--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,7 @@
         <!-- <p> Blaaaahh blahh blah Get your local weather updates to your desired travel location and organise yourself by making a custom to-do/packing list blahh blahh </p> -->
         <!-- this is the plus button this will need to be linked to the dynamically created location cards to add a new one -->
       
-        <a class="btn-floating btn-large right waves-effect waves-light cyan lighten-5 hoverable "><i
+        <a class="btn-floating btn-large right waves-effect waves-light teal lighten-3 hoverable "><i
             class=" material-icons tooltipped" data-position="bottom" data-tooltip="Add Trip">add</i></a>
       </div>
  
