--- a/stash.html
+++ b/stash.html
@@ -37,26 +37,26 @@
     <!-- Page Layout here-------------------------------------------------------------------------- -->
     <div class="row">
 
-        <div class="col s3 m3 l3">
+        <div class="col s12 m3 l3">
             <!-- Grey navigation panel -->
             <div id="sidebar" class="cyan lighten-5 ">
                 <p>This is optional, if we want to put any additional things here as a sidebar</p>
             </div>
         </div>
 
-        <div class="col s3 m9 l9">
+        <div class="col s12 m9 l9">
             <!-- main page content  ------------------------------------------------------------------------------->
             <!-- map goes here -->
             <div class="row teal lighten-4">
                 <div id="map" class="col s12 m12 l12">
-                    <div><img class="center-align" width="650"  src="./assets/images/map-default.jpg"></div>
+                    <div><img class="center-align col s12 m12 l12" width="650"  src="./assets/images/map-default.jpg"></div>
                 </div>
             </div>
 
             <!-- This will be where the weather forecast will go -------------------------------------------------------------->
             <div class="row cyan lighten-4">
-                <div id="weather" class="col s12 m12 l12">
-                    <div><img class="center-align" width="650" src="./assets/images/weather-default.jpg"></div>
+                <div id="weather" class="">
+                    <div><img class="center-align col s12 m12 l12" width="650" src="./assets/images/weather-default.jpg"></div>
                 </div>
             </div>
             <!-- this is the packing CHECKLIST SECTION ------------------------------------------------------->
