--- a/weather.html
+++ b/weather.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/weather.css">
-  <title>Weather App</title>
+  <title>City Weather</title>
 </head>
 
 <body>
